platform/keycloak/09-keycloak-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-hsts
  namespace: satmonitor-platform
spec:
  headers:
    customResponseHeaders:
      Strict-Transport-Security: ""
    customRequestHeaders:
      X-Forwarded-Proto: "http"
