platform/keycloak/03-postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-postgres
  namespace: satmonitor-platform
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: keycloak-postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
