platform/keycloak/07-keycloak-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-ingress
  namespace: satmonitor-platform
  labels:
    app.kubernetes.io/name: keycloak
    app.kubernetes.io/part-of: satmonitor-platform
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: satmonitor-platform-strip-hsts@kubernetescrd

spec:
  ingressClassName: traefik

  rules:
    - host: auth.satmonitor.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 8080
